[package]
name = "synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
audio = "0.2.0-alpha.3"
gfx_lib = {path="../gfx_lib/gfx_lib"}
gfx_lib_macro = {path="../gfx_lib/gfx_lib_macro"}
lazy_static = "1.4.0"
modulator = "0.1.0"
midi-control = "0.2.0"
midir = "0.7.0"
fundsp = "0.3.1"
# fundsp = {path = "./fundsp"}